# epiclips

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AI_CLIPPING_MIGRATION_PLAN.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  WEBHOOKS_IMPLEMENTATION.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_job.py
.github/workflows/: deploy-genesis.yml  genesis-ecr.yml
app/: __init__.py  auth.py  config.py  main.py
app/routers/: __init__.py  ai_clipping.py  detection.py  health.py
app/schemas/: __init__.py  requests.py  responses.py
app/services/: __init__.py  ai_clipping_pipeline.py  caption_generator.py  content_region_detector.py  detection_pipeline.py  face_detector.py  face_tracker.py  frame_extractor.py  intelligence_planner.py  local_storage_service.py  memory_monitor.py  pose_estimator.py  rendering_service.py  rnet_handler.py  s3_client.py  s3_upload_service.py  smart_layout_detector.py  speaker_tracker.py  tracker.py  (+4 more)
docs/: .gitignore  SCENE_SWITCHING.md  SECURITY_IMPLEMENTATION_PLAN.md  YOUTUBE_DOWNLOAD_README.md  YOUTUBE_PROXY_CONFIGURATION.md  package-lock.json  package.json  theme.config.jsx
examples/: test_job.py
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json
models/: .gitkeep
readme/: AI_AGENT_INTEGRATION.md  API_USAGE.md  CLIP_COUNT_SCALING.md  TEST_CURL_REQUESTS.md  TIME_RANGE_SELECTION.md  TIME_RANGE_TROUBLESHOOTING.md
tests/: __init__.py  conftest.py  test_detection.py  test_face_tracking.py  test_pipeline.py
(+37 files in other folders)
