[project]
name = "ai-clipping"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11,<3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "boto3>=1.42.17",
    "deep-sort-realtime>=1.3.2",
    "fastapi==0.109.0",
    "faster-whisper>=1.2.1",
    "ffmpeg-python>=0.2.0",
    "groq>=1.0.0",
    "httpx>=0.28.1",
    "mediapipe==0.10.9",
    "numpy>=1.26.3,<2.0",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=12.0.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "pysocks>=1.7.1",
    "python-dotenv>=1.2.1",
    "python-json-logger>=4.0.0",
    "python-multipart==0.0.6",
    "rnet>=2.4.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "torch",
    "uvicorn[standard]==0.27.0",
    "yt-dlp>=2025.12.8",
    "yt-dlp-ejs>=0.3.2",
]
